# labelme-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: cli.rs  commands.rs  drop_dups.rs  dsl.rs  filter.rs  init.rs  join.rs  jsonl.rs  lib.rs  lm2svg.rs  lms2html.rs  ndjson.rs  resize.rs  split_jsonl.rs  split_ndjson.rs  swap_prefix.rs  validate.rs
app/src/templates/: catalog.html  img.html  legend.html  shape_toggle.html
app/tests/: backslash.json  good.json  img1.json  rules.txt  test.json  tests.rs
app/tests/output/: img1_swapped.json
labelme-rs/: Cargo.toml
labelme-rs/src/: lib.rs
lmrs/: Cargo.toml
lmrs/src/: archive.rs  browse.rs  cli.rs  commands.rs  count.rs  drop_dups.rs  exist.rs  filter.rs  init.rs  join.rs  lib.rs  lm2svg.rs  lms2html.rs  mat.rs  merge.rs  ndjson.rs  remove.rs  resize.rs  shapeshift.rs  sort.rs  split_ndjson.rs  stats.rs  swap_prefix.rs  validate.rs
lmrs/src/snapshots/: lmrs__stats__tests__Mandrill.snap
lmrs/src/templates/: browse_id.jinja  default.css  tag_checkbox.html
lmrs/tests/: sort.json  tests.rs
lmrs/tests/snapshots/: tests__sort-by_x-descending.snap  tests__sort-by_x.snap  tests__sort-default.snap  tests__sort-descending.snap  tests__sort-inv-line.snap  tests__sort-inv-m.snap  tests__sort-only-line.snap  tests__sort-only-m.snap
lmrspy/: Cargo.toml  pyproject.toml
lmrspy/lmrspy/: __init__.py
lmrspy/src/: lib.rs
lmrspy/tests/: test_lmrspy.py
src/: lib.rs  lm2svg.rs  lms2html.rs  swap_prefix.rs
src/templates/: catalog.html  default.css
tests/data/: Mandrill.json
xtask/: Cargo.toml
xtask/src/: main.rs
