[workspace]
members = ["labelme-rs", "app", "lmrspy", "xtask"]
default-members = ["app", "labelme-rs"]
resolver = "2"

[workspace.package]
version = "0.8.3"
authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
edition = "2021"
repository = "https://github.com/ykszk/labelme-rs"
description = """
My utility tools for labelme and ndjson.

Check the repository (https://github.com/ykszk/labelme-rs) for details.
"""

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
strip = true
