[workspace]
members = ["labelme-rs", "lmrs", "lmrspy", "xtask"]
default-members = ["lmrs", "labelme-rs"]
resolver = "2"

[workspace.package]
version = "0.10.0"
authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
edition = "2021"
repository = "https://github.com/ykszk/labelme-rs"
description = """
My utility tools for labelme and ndjson.

Check the repository (https://github.com/ykszk/labelme-rs) for details.
"""

[workspace.dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
serde = { version = "1.0.204", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
