[workspace]
members = ["labelme-rs", "lmrs", "lmrspy", "xtask"]
default-members = ["lmrs", "labelme-rs"]
resolver = "2"

[workspace.package]
version = "0.11.1"
authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
edition = "2021"
repository = "https://github.com/ykszk/labelme-rs"
description = """
My utility tools for labelme and ndjson.

Check the repository (https://github.com/ykszk/labelme-rs) for details.
"""

[workspace.dependencies]
anyhow = "1.0.93"
thiserror = "2.0.1"
serde = { version = "1.0.214", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
