[package]
name = "app"
version = "0.4.0"
edition = "2021"
authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
description = """
My utility tools for labelme.
Check the repository (https://github.com/ykszk/image_tagging_tool) for details.
"""

[[bin]]
name = "lmrs"
path = "src/commands.rs"

[lib]
name = "dsl"
path = "src/dsl.rs"

[dependencies]
labelme-rs = { path = ".."}
clap = { version = "3", features = ["derive"] }
regex = "1"
tera = { version = "1", default-features = false }
log = "0"
env_logger = "0.9"
glob = "0"
indicatif = "0.16"
chumsky = "0"
num_cpus = "1"