[package]
name = "app"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "lmrs"
path = "src/commands.rs"

[lib]
name = "dsl"
path = "src/dsl.rs"

[dependencies]
labelme-rs = { path = "../labelme-rs"}
clap = { version = "3", features = ["derive"] }
regex = "1"
tera = { version = "1", default-features = false }
log = "0"
env_logger = "0.9"
glob = "0"
indicatif = "0.16"
chumsky = "0"
num_cpus = "1"
libc = "0"
lazy_static = "1.4.0"
