[package]
name = "app"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "lmrs"
path = "src/commands.rs"

[lib]
name = "lmrs"
path = "src/lib.rs"

[dependencies]
labelme-rs = { path = "../labelme-rs"}
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tera = { version = "1", default-features = false }
log = "0"
env_logger = "0"
glob = "0"
indicatif = "0.17"
chumsky = { version = "0", features = ["std"] }
num_cpus = "1"
libc = "0"
jzon = "0.12"
mimalloc = "0.1"