[package]
name = "labelme-rs"
version.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true

[features]
# default = ["dicom"]
dicom = ["dep:dicom-object", "dep:dicom-pixeldata", "dep:dicom-dictionary-std"]

[dependencies]
thiserror.workspace = true
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
serde_yaml = "0.9.31"
image = { version = "0.24.8", default-features = false, features = [
    "png",
    "jpeg",
] }
base64 = "0.21.7"
svg = "0.15.0"
indexmap = { version = "2.2.2", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.10.3"
dicom-object = { version="0.6.3", optional = true }
dicom-dictionary-std = { version="0.6.1", optional = true }

[target.'cfg(not(windows))'.dependencies]
dicom-pixeldata = { version = "0.2.2", optional = true, default-features = false, features = [
    "image",
    "gdcm",
] }
# remove windows specific dependencies once dicom-pixeldata is updated from 0.2.2
[target.'cfg(windows)'.dependencies]
dicom-pixeldata = { version = "0.2.2", optional = true, default-features = false, features = [
    "image",
] }


[dev-dependencies]
anyhow.workspace = true
