[package]
name = "labelme-rs"
version.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true

[features]
default = ["mozjpeg"]
dicom = ["dep:dicom-object", "dep:dicom-pixeldata", "dep:dicom-dictionary-std"]
mozjpeg = ["dep:mozjpeg"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json = { version = "1.0.113", features = ["preserve_order"] }
serde_yaml = "0.9.31"
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "jpeg",
] }
base64 = "0.22.1"
svg = "0.18.0"
indexmap = { version = "2.2.2", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.10.3"
dicom-object = { version = "0.8.0", optional = true }
dicom-dictionary-std = { version = "0.8.0", optional = true }
dicom-pixeldata = { version = "0.8.0", optional = true, default-features = false, features = [
    "image",
    "gdcm",
] }
mozjpeg = { version = "0.10.10", optional = true }

[dev-dependencies]
anyhow.workspace = true
