[package]
name = "lmrs"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "lmrs"
path = "src/commands.rs"

[lib]
name = "lmrs"
path = "src/lib.rs"

[features]
dicom = ["labelme-rs/dicom"]
gdcm = ["dicom", "labelme-rs/gdcm"]

[dependencies]
labelme-rs = { path = "../labelme-rs" }
clap = { version = "4.5", features = ["derive"] }
anyhow.workspace = true
thiserror.workspace = true
tera = { version = "1.19", default-features = false }
log = "0.4.20"
env_logger = "0.11.1"
glob = "0.3.1"
indicatif = "0.17.7"
chumsky = { version = "0.9.3", features = ["std"] }
num_cpus = "1.16"
libc = "0.2.153"
jzon = "0.12.5"
mimalloc = "0.1.39"
tar = "0.4.40"
serde.workspace = true
actix-web = "4.9"
toml = "0.8.19"
dirs = "5.0"
open = "5.3"

[dev-dependencies]
insta = "1.40"
tempfile = "3.10"
