[package]
name = "lmrspy"
version.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lmrspy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
labelme-rs = { path = "../labelme-rs" }
app = { path = "../app" }
