[package]
name = "lmrspy"
version.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lmrspy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.5", features = ["extension-module"] }
labelme-rs = { path = "../labelme-rs" }
lmrs = { path = "../lmrs" }
