[package]
name = "xtask"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path="../app" }
clap = { version = "4", features = ["derive", "string"] }
clap_mangen = "0.2"
clap_complete = "4.4"
home = "0.5"