[package]
name = "xtask"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lmrs = { path="../lmrs" }
clap = { version = "4.5.0", features = ["derive", "string"] }
clap_mangen = "0.2.20"
clap_complete = "4.5.0"
home = "0.5.9"